--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@primevue/themes": "^4.4.1",
+    "@tiptap/extension-character-count": "^3.10.7",
+    "@tiptap/extension-image": "^3.10.7",
+    "@tiptap/extension-link": "^3.10.7",
+    "@tiptap/extension-text-align": "^3.10.7",
+    "@tiptap/pm": "^3.10.7",
+    "@tiptap/starter-kit": "^3.10.7",
+    "@tiptap/vue-3": "^3.10.7",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
