--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/pm": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
     "@tiptap/vue-3": "^3.10.7",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
